tests/ui/consts/large_const_alloc.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/large_const_alloc.rs:6:13
   |
LL |     let x = [0_u8; (1 << 47) - 1];
   |             ^^^^^^^^^^^^^^^^^^^^^ tried to allocate more memory than available to compiler

note: erroneous constant encountered
  --> $DIR/large_const_alloc.rs:17:5
   |
LL |     FOO;
   |     ^^^

note: erroneous constant encountered
  --> $DIR/large_const_alloc.rs:17:5
   |
LL |     FOO;
   |     ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
